<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModuloActivity">

    <Button
        android:id="@+id/button4"
        android:layout_width="135dp"
        android:layout_height="71dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="avanzarB"
        android:text="@string/botonModuloB"
        app:backgroundTint="#95118C80"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="135dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:onClick="avanzarA"
        android:text="@string/botonModuloA"
        app:backgroundTint="#949C27B0"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="135dp"
        android:layout_height="71dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="avanzarC"
        android:text="@string/botonModuloC"
        app:backgroundTint="#8D258829"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="135dp"
        android:layout_height="71dp"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="avanzarT"
        android:text="@string/botonModuloT"
        app:backgroundTint="#9C3F51B5"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="135dp"
        android:layout_height="71dp"
        android:layout_below="@+id/button7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="avanzarCachorros"
        android:text="@string/botonModuloCachorros"
        app:backgroundTint="#99FF5722"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="135dp"
        android:layout_height="71dp"
        android:layout_below="@+id/button8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="avanzarGeri"
        android:text="@string/botonModuloGeri"
        app:backgroundTint="#99553F3F"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="92dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/mensajeSeleccionModulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="cerrarSesion"
        app:backgroundTint="#A8FB1403"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#F8F6F6"
        app:srcCompat="@android:drawable/ic_lock_power_off" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="irInfo"
        app:backgroundTint="#A63F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#F8F6F6"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/floatingActionButton2"
        android:layout_alignStart="@+id/floatingActionButton2"
        android:layout_alignLeft="@+id/floatingActionButton2"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginBottom="0dp"
        android:text="@string/cerrarSesion"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
</RelativeLayout>